--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,13 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+# Ignore all images in the _images folder
+_images/*.jpg
+_images/*.png
+
+# Allow a specific .txt file inside the _images folder
+!_images/*.txt
+
 # Videos
 videos
 Videos
