--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,9 @@ yarn-error.log*
 lerna-debug.log*
 .pnpm-debug.log*
 
+#venv
+**/_env_dark_eco/
+
 
 # Ignore all images in the _images folder
 _images/*.jpg
